// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package enforcer.v1;

// Specifies import path for the generated Go code used to auto-generate SDK
// code from proto annotations.
option go_package = "github.com/private-compute-infra-toolkit/ez/sdk/v1";

// All data scope types understood by EZ are listed here.
// Changes should be carefully reviewed for consequences and potential
// deployment issues, since this enum is shared by all EZ related code.
// TODO: Insert link to documentation
enum DataScopeType {
  DATA_SCOPE_TYPE_UNSPECIFIED = 0; // Unknown scope type.
  DATA_SCOPE_TYPE_PUBLIC = 1; // Ownerless scope
  DATA_SCOPE_TYPE_DOMAIN_OWNED = 2; // Owner is a developer
  DATA_SCOPE_TYPE_USER_PRIVATE = 3; // Owner is a user
  DATA_SCOPE_TYPE_MULTI_USER_PRIVATE = 4; // No single owner
  DATA_SCOPE_TYPE_SEALED = 5; // No implicitly safe data flows
}
